--- a/trade-results.html
+++ b/trade-results.html
@@ -311,7 +311,7 @@
            
             <div class="footer__bottom">
                 <div class="copyright-text">
-                    <p>Copyright & design by <a href="https://themeforest.net/user/themeadapt" target="_blank">@ThemeAdapt</a> - 2025</p>
+                    <p>Copyright & design by <a href="" target="_blank">@ A.O webtech</a> - 2025</p>
                 </div>
             </div>
         </div>
