--- a/trade-results.html
+++ b/trade-results.html
@@ -61,7 +61,7 @@
                                 <div class="tgmenu__action">
                                     <ul class="list-wrap">
                                         <li class="header-btn">
-                                            <a href="trade-results.html" class="tg-btn">buy now</a>
+                                            <a href="trade-results.html" class="tg-btn">Trade Now</a>
                                         </li>
                                     </ul>
                                 </div>
