--- a/trade-results.html
+++ b/trade-results.html
@@ -65,11 +65,11 @@
                         <div class="tgmenu__wrap">
                             <nav class="tgmenu__nav">
                                 <div class="logo">
-                                    <a href="www.lexicrone.com"><img src="assets/img/logo.png" alt="Logo"></a>
+                                    <a href="https://lexicrone.com"><img src="assets/img/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="tgmenu__navbar-wrap tgmenu__main-menu d-none d-lg-flex">
                                     <ul class="navigation">
-                                        <li><a href="wwww.lexicrone.com" class="section-link">Home</a></li>
+                                        <li><a href="https://lexicrone.com" class="section-link">Home</a></li>
                                        
                                    
                                         <li><a href="https://x.com/lexicroneai" class="section-link">how it works</a></li>
